# scopeform

./: .env.example  .gitattributes  .gitignore  Makefile  README.md  action.yml  alembic.ini  docker-compose.yml  package-lock.json  package.json  pyproject.toml  railway.toml
.github/workflows/: ci.yml  claim.yml  deploy-api.yml  pr-welcome.yml  publish-images.yml  publish-node.yml  publish-python.yml  scopeform-example.yml
api/: Dockerfile  __init__.py  main.py  requirements.txt
api/core/: config.py  database.py  deps.py  openapi.py  redis.py  token.py
api/migrations/: env.py
api/models/: __init__.py  agent.py  log.py  organisation.py  token.py  user.py
api/routers/: __init__.py  agents.py  auth.py  badges.py  broker.py  integrations.py  logs.py  proxy.py  tokens.py
api/schemas/: __init__.py  agent.py  auth.py  log.py  token.py
api/tests/: conftest.py  test_agents.py  test_badges.py  test_broker.py  test_logs.py  test_proxy_limits.py  test_tokens.py
cli-node/: .npmignore  README.md  jest.config.cjs  package.json  tsconfig.json
cli-py/: README.md  pyproject.toml
cli-py/scopeform/: main.py
cli-py/scopeform/commands/: __init__.py  deploy.py  init.py  login.py  logs.py  revoke.py  scan.py  status.py  up.py
cli-py/scopeform/utils/: api_client.py  config.py  yaml_utils.py
cli-py/tests/: test_commands.py  test_scan.py
docs/: README.md  api-reference.md  cli-reference.md  github-actions-integration.md  quickstart.md  scopeform-yml.md  security.md
web/: Dockerfile  middleware.ts  next.config.mjs  package.json  tailwind.config.js  vitest.config.ts
(+72 files in other folders)
